# OS

./: .gitmodules  README.md  list.lua  midterm.c  os.lua  signals.c
aio/: Makefile  aaccept.cpp  aaccept.h  aoperation.cpp  aoperation.h  aread.cpp  aread.h  autofd.cpp  autofd.h  awrite.cpp  awrite.h  binary_expression.h  buffer.cpp  buffer.h  copy.cpp  copy.h  epoll.cpp  epoll.h  epollfd.cpp  epollfd.h  expression.h  main.cpp  unary_expression.h  var.h
dupme/: Makefile  main.c
filter/: filter.c  older  task
malloc/: CMakeLists.txt  Makefile  common.cpp  common.h  hoard.cpp  hoard.h  hoard_fwd.h  linear.cpp  linear.h  malloc.c  malloc.cpp  mmap.cpp  mmap.h  slab.cpp  slab.h  test.cpp
midterm/: list.lua  midterm.c
operator/daemon/: Makefile  main.c  script
rshell/: Makefile  client.c  common.c  common.h  daemon.c  daemon.h  rshell.c
simple-bash/: brokensymlinks  renamer  watchthis  watchthis.c
